components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__replan_over_a_paused_process_with_scm_defining_changes.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: built.render_text()
---
<scm plan> [TMP]/scm/1001/plan.json
model      : 1001.mod
out dir    : scm/1001
direction  : forward -> backward
forward    : alpha 0.01
backward   : alpha 0.001
on failure : retry up to 3x from the previous attempt's estimates, jittered 5%
cov step   : off
forward fit: re-fit the forward model with the cov step on, alongside backward elimination
final fit  : re-fit the final model with the cov step on
num rounds : pause after 2 (resumable)
candidates :
  name         theta     type          initial  FIXED
  WT_CL        THETA(4)  continuous        0.1      0
  CRCL_CL      THETA(5)  continuous        0.1      0
  WT_V         THETA(6)  continuous        0.1      0
             (initial: the effect's initial estimate the first time it is tested; FIXED: what it is fixed at when held out)
max models : 13 (incl. reference fit, excl. retries)

progress   : paused — 2 rounds complete, forward phase (updated [TIMESTAMP])
selected   : WT_CL, CRCL_CL
in round   : forward_round3 — 1/2 concluded
changes    : 3 changes vs the previous plan
  forward_alpha  0.05 -> 0.01
  candidates     WT_V added THETA(6)
  num_rounds     no cap -> 2
note       : the SCM process in scm/1001 belongs to the previous plan; it cannot resume under this one:
             - forward_alpha 0.05 -> 0.01: this SCM process ran under the previous value
             - WT_V is not part of this SCM process; adding a candidate needs overwrite
             so this plan is not written; re-plan with --overwrite to discard that process and start fresh
