components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__replan_removing_a_loser.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: loser_gone.render_text()
---
<scm plan> [TMP]/scm/1001/plan.json
model      : 1001.mod
out dir    : scm/1001
direction  : forward -> backward
forward    : alpha 0.05
backward   : alpha 0.001
on failure : retry up to 3x from the previous attempt's estimates, jittered 5%
cov step   : off
forward fit: re-fit the forward model with the cov step on, alongside backward elimination
final fit  : re-fit the final model with the cov step on
candidates :
  name         theta     type          initial  FIXED
  WT_CL        THETA(4)  continuous        0.1      0
  CRCL_CL      THETA(5)  continuous        0.1      0
             (initial: the effect's initial estimate the first time it is tested; FIXED: what it is fixed at when held out)
max models : 7 (incl. reference fit, excl. retries)

progress   : paused — 2 rounds complete, forward phase (updated [TIMESTAMP])
selected   : WT_CL, CRCL_CL
in round   : forward_round3 — 1/2 concluded
changes    : 1 change vs the previous plan
  candidates     WT_V removed THETA(6)
removing   : WT_V — never selected; takes effect from the next round, earlier rounds keep their results
