components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__replan_removing_a_winner.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: winner_gone.render_text()
---
<scm plan> [TMP]/scm/1001/pharos_scm_plan.json
model      : 1001.mod
out dir    : scm/1001
direction  : forward -> backward
forward    : alpha 0.05
backward   : alpha 0.001
on failure : retry up to 3x from the previous attempt's estimates, jittered 5%
cov step   : off
forward fit: re-fit the forward model with the cov step on
final fit  : re-fit the final model with the cov step on
candidates :
  name         theta     type          initial  FIXED
  CRCL_CL      THETA(5)  continuous        0.1      0
  WT_V         THETA(6)  continuous        0.1      0
             (initial: the effect's initial estimate the first time it is tested; FIXED: what it is fixed at when held out)
max models : 7 (incl. reference fit, excl. retries)

progress   : paused — 2 rounds complete, forward phase (updated [TIMESTAMP])
selected   : WT_CL, CRCL_CL
in round   : forward_round3 — 1/2 concluded
changes    : 1 change vs the previous plan
  candidates     WT_CL removed THETA(4) — selected in forward_round1
note       : the SCM process in scm/1001 belongs to the previous plan; it cannot resume under this one:
             - WT_CL was selected in forward_round1; the rounds after it were built on it, so removing it needs overwrite
             so this plan is not written; re-plan with --overwrite to discard that process and start fresh
